--- a/Calculator/calculator.html
+++ b/Calculator/calculator.html
@@ -10,7 +10,7 @@
 </head>
 
 
-<body>
+<body onload="defState()">
     <div id="heading">
         <h1>CALCULATOR</h1>
         <h2>Welcome to Calculator!</h2>
@@ -31,66 +31,66 @@
                     <div class="button" id="OFF" value="unclicked" onclick="offClicked()">
                         <p class="button-text" id="off">OFF</p>
                     </div>
-                    <div class="button" id="AC" value="unclicked" onclick="hello('AC')">
+                    <div class="button" id="AC" value="unclicked" onclick="cleared()">
                         <p class="button-text" id="ac">AC</p>
                     </div>
-                    <div class="button" id="=" value="unclicked" onclick="hello('=')">
+                    <div class="button" id="=" value="unclicked" onclick="goofingAround()">
                         <p class="button-text" id="equal">=</p>
                     </div>
                 </div>
                 <div class="buttons-rows" id="r1">
-                    <div class="button" id="1" value="unclicked" onclick="hello('1')">
+                    <div class="button" id="1" value="unclicked" onclick="clickButton(1)">
                         <p class="button-text" id="ONE">1</p>
                     </div>
-                    <div class="button" id="2" value="unclicked" onclick="hello('2')">
+                    <div class="button" id="2" value="unclicked" onclick="clickButton(2)">
                         <p class="button-text" id="TWO">2</p>
                     </div>
-                    <div class="button" id="3" value="unclicked" onclick="hello('3')">
+                    <div class="button" id="3" value="unclicked" onclick="clickButton(3)">
                         <p class="button-text" id="THREE">3</p>
                     </div>
-                    <div class="button" id="+" value="unclicked" onclick="hello('+')">
+                    <div class="button" id="+" value="unclicked" onclick="clickButton('+')">
                         <p class="button-text" id="add">+</p>
                     </div>
                 </div>
                 <div class="buttons-rows" id="2">
                     <div class="button" id="4">
-                        <p class="button-text" id="FOUR" value="unclicked" onclick="hello('4')">4</p>
+                        <p class="button-text" id="FOUR" value="unclicked" onclick="clickButton(4)">4</p>
                     </div>
                     <div class="button" id="5">
-                        <p class="button-text" id="FIVE" value="unclicked" onclick="hello('5')">5</p>
+                        <p class="button-text" id="FIVE" value="unclicked" onclick="clickButton(5)">5</p>
                     </div>
                     <div class="button" id="6">
-                        <p class="button-text" id="SIX" value="unclicked" onclick="hello('6')">6</p>
+                        <p class="button-text" id="SIX" value="unclicked" onclick="clickButton(6)">6</p>
                     </div>
-                    <div class="button" id="-" value="unclicked" onclick="hello('-')">
+                    <div class="button" id="-" value="unclicked" onclick="clickButton('-')">
                         <p class="button-text" id="sub">-</p>
                     </div>
                 </div>
                 <div class="buttons-rows" id="r3">
-                    <div class="button" id="7" value="unclicked" onclick="hello('7')">
+                    <div class="button" id="7" value="unclicked" onclick="clickButton(7)">
                         <p class="button-text" id="SEVEN">7</p>
                     </div>
-                    <div class="button" id="8" value="unclicked" onclick="hello('8')">
+                    <div class="button" id="8" value="unclicked" onclick="clickButton(8)">
                         <p class="button-text" id="EIGHT">8</p>
                     </div>
-                    <div class="button" id="9" value="unclicked" onclick="hello('9')">
+                    <div class="button" id="9" value="unclicked" onclick="clickButton(9)">
                         <p class="button-text" id="NINE">9</p>
                     </div>
-                    <div class="button" id="*" value="unclicked" onclick="hello('*')">
+                    <div class="button" id="*" value="unclicked" onclick="clickButton('*')">
                         <p class="button-text" id="mul">*</p>
                     </div>
                 </div>
                 <div class="buttons-rows" id="r4">
-                    <div class="button" id="(" value="unclicked" onclick="hello('&#40')">
+                    <div class="button" id="(" value="unclicked" onclick="clickButton('&#40')">
                         <p class="button-text" id="lPar">(</p>
                     </div>
-                    <div class="button" id="0" value="unclicked" onclick="hello('0')">
+                    <div class="button" id="0" value="unclicked" onclick="clickButton(0)">
                         <p class="button-text" id="ZER0">0</p>
                     </div>
-                    <div class="button" id=")" value="unclicked" onclick="hello('&#41')">
+                    <div class="button" id=")" value="unclicked" onclick="clickButton('&#41')">
                         <p class="button-text" id="rPar">)</p>
                     </div>
-                    <div class="button" id="/" value="unclicked" onclick="hello('/')">
+                    <div class="button" id="/" value="unclicked" onclick="clickButton('/')">
                         <p class="button-text" id="div">/</p>
                     </div>
                 </div>
